# sudoku

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sudoku.c  sudoku.h  sudokuaux.c  sudokuaux.h  sudokusolver.c
tests/: CMakeLists.txt  board.txt  boards.txt  input.txt  invalidboard1.txt  invalidboard2.txt  invalidboard3.txt  invalidboard4.txt  invalidboard5.txt  invalidboard6.txt  output.txt  randomsudoku.c  testsudoku.c
